--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "jsblog",
   "version": "0.1.0",
+  "homepage": "https://CharlesBerg85.github.io/Faithful-Reflections-Bible-Blog-App",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "easy-peasy": "^6.0.1",
@@ -11,10 +13,11 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
-    "router-dom": "^2.2.11",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "router-dom": "^2.2.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
