--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "easy-peasy": "^6.0.1",
+    "got": "^13.0.0",
+    "json-server": "^0.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.13.0",
-    "react-scripts": "5.0.1",
-    "router-dom": "^2.2.11"
+    "react-scripts": "^5.0.1",
+    "router-dom": "^2.2.11",
+    "semver": "^7.5.4",
+    "word-wrap": "^1.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
