--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "word-wrap": "^1.2.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server --watch data/db.json --port 3500"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
