--- a/package.json
+++ b/package.json
@@ -1,1 +1,46 @@
-{"name":"jsblog","version":"0.1.0","private":true,"dependencies":{"@babel/plugin-proposal-private-property-in-object":"^7.16.7","axios":"^1.4.0","date-fns":"^2.30.0","easy-peasy":"^6.0.1","got":"^13.0.0","json-server":"^0.16.3","react":"^18.2.0","react-dom":"^18.2.0","react-icon":"^1.0.0","react-icons":"^4.10.1","react-router-dom":"^6.13.0","react-scripts":"^5.0.1","router-dom":"^2.2.11","semver":"^7.5.4","word-wrap":"^1.2.3"},"scripts":{"start":"node server.js","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject"},"eslintConfig":{"extends":["react-app","react-app/jest"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]}}
+{ 
+  "name": "jsblog",
+  "version": "0.1.0",
+  "private": true,
+
+  "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "easy-peasy": "^6.0.1",
+    "got": "^13.0.0",
+    "json-server": "^0.16.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.13.0",
+    "react-scripts": "^5.0.1",
+    "router-dom": "^2.2.11",
+    "semver": "^7.5.4",
+    "word-wrap": "^1.2.3"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
+}
