--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "word-wrap": "^1.2.3"
   },
   "scripts": {
-    "start": "node serve.js",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
