--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "word-wrap": "^1.2.3"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 3500"
   },
   "eslintConfig": {
     "extends": [
