--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 3500"
+    "server": "json-server --watch data/db.json --port 3500"
   },
   "eslintConfig": {
     "extends": [
