--- a/Faithful_Reflections_Next/faithful-reflections/package.json
+++ b/Faithful_Reflections_Next/faithful-reflections/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@next/font": "13.4.12",
-    "@types/node": "20.4.4",
-    "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "firebase": "^10.1.0",
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.4",
+    "@types/react": "^18.2.16",
+    "typescript": "^5.1.6"
   }
 }
