--- a/Faithful_Reflections_Next/faithful-reflections/package.json
+++ b/Faithful_Reflections_Next/faithful-reflections/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@next/font": "13.4.12",
+    "@types/axios": "^0.14.0",
     "@types/react-dom": "18.2.7",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "firebase": "^10.1.0",
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@types/node": "^20.4.4",
