--- a/Faithful_Reflections_Next/faithful-reflections/package.json
+++ b/Faithful_Reflections_Next/faithful-reflections/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@next/font": "13.4.12",
     "@types/axios": "^0.14.0",
+    "@types/date-fns": "^2.6.0",
     "@types/react-dom": "18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "firebase": "^10.1.0",
