--- a/Faithful_Reflections_Next/faithful-reflections/package.json
+++ b/Faithful_Reflections_Next/faithful-reflections/package.json
@@ -22,8 +22,7 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2"
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/node": "^20.4.4",
